# Puretype

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  README.md  bump-version.ps1  puretype.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  panel_compatibility.md
.github/workflows/: release.yml
PuretypeUI/: App.xaml  App.xaml.cs  AppVersion.cs  MainWindow.xaml  MainWindow.xaml.cs  PuretypeUI.csproj  Styles.xaml
PuretypeUI/Services/: GitHubUpdateService.cs
docs/: TECHNICAL.md  new_architecture.html
include/: color_math.h  config.h  puretype.h  render_optimizer.h  stem_darkening.h
include/filters/: subpixel_filter.h  tone_mapper.h
include/hooks/: dwrite_hooks.h  gdi_hooks.h
include/output/: blender.h  tone_parity.h
include/rasterizer/: ft_rasterizer.h
src/: config.cpp  dllmain.cpp  puretype.rc
src/filters/: subpixel_filter.cpp  tone_mapper.cpp
src/hooks/: dwrite_hooks.cpp  gdi_hooks.cpp
src/output/: blender.cpp
src/rasterizer/: ft_rasterizer.cpp
src/ui/: preview_bridge.cpp
tools/: injector.cpp
